--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     const link = document.createElement("link");
     link.rel = "stylesheet";
     link.type = "text/css";
-    link.href = "D3 Files/stylesheet_v1.css?v=" + new Date().getTime(); // cache-busting
+    link.href = "D3 Files/stylesheet_v1.css";
     document.head.appendChild(link);
 </script>
 
